// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UBL > post-processing > should append default notes to credit-note notes 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<CreditNote xmlns="urn:oasis:names:specification:ubl:schema:xsd:CreditNote-2" xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2">
	<cbc:ID>1234567890</cbc:ID>
	<cbc:CreditNoteTypeCode>381</cbc:CreditNoteTypeCode>
	<cbc:Note>Please send complaints to devnull@us.com</cbc:Note>
	<cbc:Note>Buy a dozen donuts at the Kwik-E-Mart and instantly become Homer-level happy—guaranteed to make your cat ignore you!</cbc:Note>
	<cbc:Note>Order Bart's Skateboard Deluxe 3000 from the Simpson Garage because it's the only board that survives a launch over Grandpa's dentures!</cbc:Note>
</CreditNote>"
`;

exports[`UBL > post-processing > should append default notes to invoice notes 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2" xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2">
	<cbc:ID>1234567890</cbc:ID>
	<cbc:InvoiceTypeCode>380</cbc:InvoiceTypeCode>
	<cbc:Note>Please send complaints to devnull@us.com</cbc:Note>
	<cbc:Note>Buy a dozen donuts at the Kwik-E-Mart and instantly become Homer-level happy—guaranteed to make your cat ignore you!</cbc:Note>
	<cbc:Note>Order Bart's Skateboard Deluxe 3000 from the Simpson Garage because it's the only board that survives a launch over Grandpa's dentures!</cbc:Note>
</Invoice>"
`;

exports[`UBL > should attach attachments 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2" xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2">
	<cac:AdditionalDocumentReference>
		<cbc:ID>hours-sheet</cbc:ID>
		<cbc:DocumentDescription>A detailed breakdown of the hours worked</cbc:DocumentDescription>
		<cac:Attachment>
			<cbc:EmbeddedDocumentBinaryObject mimeCode="application/vnd.oasis.opendocument.spreadsheet" filename="hours-sheet.ods">dGVzdA==</cbc:EmbeddedDocumentBinaryObject>
		</cac:Attachment>
	</cac:AdditionalDocumentReference>
	<cac:AdditionalDocumentReference>
		<cbc:ID>catalogue.pdf</cbc:ID>
		<cac:Attachment>
			<cbc:EmbeddedDocumentBinaryObject mimeCode="application/pdf" filename="catalogue.pdf">dGVzdA==</cbc:EmbeddedDocumentBinaryObject>
		</cac:Attachment>
	</cac:AdditionalDocumentReference>
</Invoice>"
`;

exports[`UBL > should embed a PDF 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2" xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2">
	<cac:AdditionalDocumentReference>
		<cac:Attachment>
			<cbc:EmbeddedDocumentBinaryObject mimeCode="application/pdf" filename="invoice.pdf">SW52b2ljZQ==</cbc:EmbeddedDocumentBinaryObject>
		</cac:Attachment>
	</cac:AdditionalDocumentReference>
</Invoice>"
`;

exports[`UBL > should embed a PDF passed as an argument 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2" xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2">
	<cac:AdditionalDocumentReference>
		<cbc:DocumentDescription>A human-readable version of the invoice</cbc:DocumentDescription>
		<cac:Attachment>
			<cbc:EmbeddedDocumentBinaryObject mimeCode="application/pdf" filename="invoice.pdf">dGVzdA==</cbc:EmbeddedDocumentBinaryObject>
		</cac:Attachment>
	</cac:AdditionalDocumentReference>
</Invoice>"
`;

exports[`UBL > should filenames without a dot correctly 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2" xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2">
	<cac:AdditionalDocumentReference>
		<cac:Attachment>
			<cbc:EmbeddedDocumentBinaryObject mimeCode="application/pdf" filename="/path/to.files/invoice.pdf">SW52b2ljZQ==</cbc:EmbeddedDocumentBinaryObject>
		</cac:Attachment>
	</cac:AdditionalDocumentReference>
</Invoice>"
`;

exports[`UBL > should generate XML 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<Invoice xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2" xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"/>"
`;
